# FBMarketplaceDealFinder

./: README.md  browser_setup.py  matplotlibrc  pyproject.toml  requirements.txt  scrapperTutorialYT.ipynb  test.py
