[project]
name = "fbmarketplacedealfindervenv"
version = "0.1.0"
description = "All the libs needed are in here for this to run."
authors = [
    {name = "Jeremy Dube",email = "jeredube@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.4,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
